# PyBroker

./: Dockerfile  README.md  docker-compose.yml  requirements.txt  Практика-Брокер-Сообщений.md
docs/: architecture.md  data-structures.md  implementation-plan.md  tech-stack.md
examples/: publisher.py  subscriber_a.py  subscriber_b.py
practice1/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
practice1/app/: bootstrap.py  config.py  database.py  exceptions.py  main.py  models.py  repositories.py  schemas.py  services.py  unit_of_work.py
pybroker/client/: client.py
pybroker/common/: models.py
pybroker/server/: __main__.py  broker.py  connection.py  metrics.py  protocol.py  queue.py  server.py  storage.py  topic.py
test_data/: broker.db-shm  broker.db-wal
