[project]
name = "online-store-transactions"
version = "0.1.0"
description = "Online store transactions demo with SQLAlchemy and PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
